syntax = "proto3";

package grpcnc;

service Nc {
    rpc SendSMS (SendSMSRequest) returns (SendSMSReply);
}

message SendSMSRequest {
    string phone = 1;
    string text = 2;
}

message SendSMSReply {
    // 0 - ошибок нет;
    // 1 - возникла внутренняя ошибка;
    int64 error_code = 1;
}